--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -158,10 +158,10 @@
 
                 <div class = "contact-c d-flex flex-col">
                     <div class = "d-flex ai-center jc-center">
-                        <img src = "img/phone.png"> 8063-473-82-99
+                        <i class = "fa fa-phone"></i>  8063-473-82-99
                     </div>
                     <div class = "d-flex ai-center jc-center">
-                        <img src = "img/envelop.png"> sweet.dnepr@gmail.com
+                        <i class = "fa fa-envelope"></i> sweet.dnepr@gmail.com
                     </div>
                 </div>
 
@@ -192,28 +192,29 @@
         <div class = "container d-flex jc-around text-uppercase">
             <div class = "footer-item">
                 <a href = "#">
-                    Facebook
+                   <i class = "fa fa-facebook"></i> Facebook
                 </a>
             </div>
             <div class = "footer-item">
                 <a href = "#">
-                    Dribble
+                    <i class = "fa fa-dribbble"></i> Dribble
                 </a>
             </div>
             <div class = "footer-item">
                 <a href = "#">
-                    Instagram
+                    <i class = "fa fa-instagram"></i> Instagram
                 </a>
             </div>
             <div class = "footer-item">
                 <a href = "#">
-                    Behance
+                    <i class = "fa fa-behance"></i> Behance
                 </a>
             </div>
         </div>
     </footer>
 
     </body>
+    <link href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel = "stylesheet">
     <link href = "css/slick.css" rel = "stylesheet">
     <link href = "css/nav.css" rel = "stylesheet">
     <link href = "css/header.css" rel = "stylesheet">
