--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -107,7 +107,7 @@
                 MY WORKS
             </div>
 
-            <div class = "d-flex ai-center">
+            <div class = "d-flex ai-center jc-around">
                 <div class = "prevArrow">
                     <img src = "img/arrow.png">
                 </div>
