--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -17,12 +17,17 @@
 
     <div class = "background"></div>
 
-    <nav class = "d-flex">
-        <div class = "nav-menu d-flex flex-row">
-            <div class = "nav-item"><a href = "#header">Home</a></div>
-            <div class = "nav-item"><a href = "#portfolio">Portfolio</a></div>
-            <div class = "nav-item"><a href = "#about">About me</a></div>
-            <div class = "nav-item"><a href = "#contact">Contact</a></div>
+    <nav class = "container-fluid">
+        <div class = "container d-flex ai-center jc-between">
+            <div class = "logo">
+                <img src = "img/logo.png">
+            </div>
+            <div class = "nav-menu d-flex flex-row">
+                <div class = "nav-item"><a href = "#header">Home</a></div>
+                <div class = "nav-item"><a href = "#portfolio">Portfolio</a></div>
+                <div class = "nav-item"><a href = "#about">About me</a></div>
+                <div class = "nav-item"><a href = "#contact">Contact</a></div>
+            </div>
         </div>
     </nav>
 
