--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -98,8 +98,8 @@
             </div>
             <div class = "about-main">
                     Hi! My name is Polina Rubtsova. <br>
-                    I’m a UI/UX designer, based in Dnipro,Ukrain. <br>
-                    I loves clean, simple and unique design. <br>
+                    I’m a UI/UX designer, based in Dnipro,Ukraine. <br>
+                    I love clean, simple and unique design. <br>
                     I also enjoy crafting brand identities, <br>
                     icon and illustration works. <br>
             </div>
@@ -163,10 +163,13 @@
 
                 <div class = "contact-c d-flex flex-col">
                     <div class = "d-flex ai-center jc-center">
-                        <i class = "fa fa-phone"></i>  8063-473-82-99
+                        <i class = "fa fa-phone"></i>  +38063-473-82-99
                     </div>
                     <div class = "d-flex ai-center jc-center">
                         <i class = "fa fa-envelope"></i> sweet.dnepr@gmail.com
+                    </div>
+                    <div class = "d-flex ai-center jc-center">
+                        <i class = "fa fa-map-marker"></i>Dnipro,Ukraine
                     </div>
                 </div>
 
