--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -60,10 +60,10 @@
 
                 <div class = "service-item">
                     <div class = "service-title">
-                        Well Documented
+                        Modernity
                     </div>
                     <div class = "service-desc">
-                        The best way to excel over other projects is to make your site unique and creative.
+                        Always up to date with the latest trends across design & tech.
                     </div>
                 </div>
 
@@ -72,16 +72,16 @@
                         Devolopment
                     </div>
                     <div class = "service-desc">
-                        The best way to excel over other projects is to make your site unique and creative.
+                        I can develop for you all the necessary range of elements of corporate identity in short time.
                     </div>
                 </div>
 
                 <div class = "service-item">
                     <div class = "service-title">
-                        Eazy To Customize
+                        Clear deadlines
                     </div>
                     <div class = "service-desc">
-                        The best way to excel over other projects is to make your site unique and creative.
+                        You can be sure - the project will be devilered on time, within the agreed time.
                     </div>
                 </div>
             </div>
