--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -155,7 +155,7 @@
     </section>
 
     <section id = "contact" class = "container-fluid">
-        <form action="https://formspree.io/singularity123097@gmail.com" method="POST">
+        <form action="https://formspree.io/sweet.dnepr@gmail.com" method="POST">
         <div class = "d-flex flex-col jc-center ai-center text-center contact-container">
                 <div class = "contact-title text-uppercase">
                     Contact me
@@ -179,13 +179,13 @@
 
                 <div class = "inputs">
                     <div class = "input-item">
-                        <input placeholder="Your name" title = "Your name" name = "name">
+                        <input placeholder="Your name" title = "Your name" name = "name" required>
                     </div>
                     <div class = "input-item">
-                        <input placeholder="Your e-mail" title = "Your e-mail" type = "email" name = "email">
+                        <input placeholder="Your e-mail" title = "Your e-mail" type = "email" name = "email" required>
                     </div>
                     <div class = "input-item">
-                        <textarea placeholder="Your message" rows = "3" name = "text"></textarea>
+                        <textarea placeholder="Your message" rows = "3" name = "text" required></textarea>
                     </div>
                 </div>
 
