--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Appoligeya</title>
         <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
         <link href = "css/flex.css" rel = "stylesheet">
         <link href = "css/main.css" rel = "stylesheet">
@@ -13,7 +14,7 @@
     <body>
 
     <div class = "loading d-flex ai-center jc-center">
-        <img src = "img/loading.gif">
+        <img src = "img/loading.gif" alt = "">
     </div>
 
     <div class = "background"></div>
@@ -21,7 +22,7 @@
     <nav class = "container-fluid">
         <div class = "container d-flex ai-center jc-between">
             <div class = "logo">
-                <img src = "img/logo.png">
+                <img src = "img/logo.png" alt = "">
             </div>
             <div class = "nav-menu d-flex flex-row">
                 <div class = "nav-item"><a href = "#header">Home</a></div>
@@ -115,27 +116,27 @@
 
             <div class = "d-flex ai-center jc-around">
                 <div class = "prevArrow">
-                    <img src = "img/arrow.png">
+                    <img src = "img/arrow.png" alt = "">
                 </div>
                 <div class = "portf-slider">
                     <div class = "slider-item">
-                        <img src = "img/p-item.png">
+                        <img src = "img/p-item.png" alt = "">
                     </div>
                     <div class = "slider-item">
-                        <img src = "img/p-item.png">
+                        <img src = "img/p-item.png" alt = "">
                     </div>
                     <div class = "slider-item">
-                        <img src = "img/p-item.png">
+                        <img src = "img/p-item.png" alt = "">
                     </div>
                     <div class = "slider-item">
-                        <img src = "img/p-item.png">
+                        <img src = "img/p-item.png" alt = "">
                     </div>
                     <div class = "slider-item">
-                        <img src = "img/p-item.png">
+                        <img src = "img/p-item.png" alt = "">
                     </div>
                 </div>
                 <div class = "nextArrow">
-                    <img src = "img/arrow.png" class = "r">
+                    <img src = "img/arrow.png" class = "r" alt = "">
                 </div>
             </div>
         </div>
@@ -222,7 +223,6 @@
         </div>
     </footer>
 
-    </body>
     <link href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel = "stylesheet">
     <link href = "css/slick.css" rel = "stylesheet">
     <link href = "css/nav.css" rel = "stylesheet">
@@ -233,4 +233,5 @@
     <link href = "css/freelance.css" rel = "stylesheet">
     <link href = "css/contact.css" rel = "stylesheet">
     <link href = "css/footer.css" rel = "stylesheet">
+    </body>
 </html>
