--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
 <html>
     <head>
-        <title>Appoligeya</title>
         <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
         <link href = "css/flex.css" rel = "stylesheet">
         <link href = "css/main.css" rel = "stylesheet">
@@ -14,7 +12,7 @@
     <body>
 
     <div class = "loading d-flex ai-center jc-center">
-        <img src = "img/loading.gif" alt = "">
+        <img src = "img/loading.gif">
     </div>
 
     <div class = "background"></div>
@@ -22,7 +20,7 @@
     <nav class = "container-fluid">
         <div class = "container d-flex ai-center jc-between">
             <div class = "logo">
-                <img src = "img/logo.png" alt = "">
+                <img src = "img/logo.png">
             </div>
             <div class = "nav-menu d-flex flex-row">
                 <div class = "nav-item"><a href = "#header">Home</a></div>
@@ -116,27 +114,27 @@
 
             <div class = "d-flex ai-center jc-around">
                 <div class = "prevArrow">
-                    <img src = "img/arrow.png" alt = "">
+                    <img src = "img/arrow.png">
                 </div>
                 <div class = "portf-slider">
                     <div class = "slider-item">
-                        <img src = "img/p-item.png" alt = "">
+                        <img src = "img/p-item.png">
                     </div>
                     <div class = "slider-item">
-                        <img src = "img/p-item.png" alt = "">
+                        <img src = "img/p-item.png">
                     </div>
                     <div class = "slider-item">
-                        <img src = "img/p-item.png" alt = "">
+                        <img src = "img/p-item.png">
                     </div>
                     <div class = "slider-item">
-                        <img src = "img/p-item.png" alt = "">
+                        <img src = "img/p-item.png">
                     </div>
                     <div class = "slider-item">
-                        <img src = "img/p-item.png" alt = "">
+                        <img src = "img/p-item.png">
                     </div>
                 </div>
                 <div class = "nextArrow">
-                    <img src = "img/arrow.png" class = "r" alt = "">
+                    <img src = "img/arrow.png" class = "r">
                 </div>
             </div>
         </div>
@@ -223,6 +221,7 @@
         </div>
     </footer>
 
+    </body>
     <link href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel = "stylesheet">
     <link href = "css/slick.css" rel = "stylesheet">
     <link href = "css/nav.css" rel = "stylesheet">
@@ -233,5 +232,4 @@
     <link href = "css/freelance.css" rel = "stylesheet">
     <link href = "css/contact.css" rel = "stylesheet">
     <link href = "css/footer.css" rel = "stylesheet">
-    </body>
 </html>
