--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE HTML >
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Appoligeya</title>
         <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
         <link href = "css/flex.css" rel = "stylesheet">
         <link href = "css/main.css" rel = "stylesheet">
