--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -20,7 +20,7 @@
     <div class = "background"></div>
 
     <nav class = "container-fluid">
-        <div class = "container d-flex ai-center jc-between">
+        <div class = "container d-flex ai-center jc-between navigat">
             <div class = "logo">
                 <img src = "img/logo.png">
             </div>
@@ -33,6 +33,10 @@
         </div>
     </nav>
 
+    <div class = "tablet-nav">
+        <i class = "fa fa-bars"></i>
+    </div>
+
     <header class = "container-fluid d-flex jc-center ai-center flex-col" id = "header">
         <div class = "header-name">
             Polina Rubtsova
@@ -43,7 +47,7 @@
     </header>
 
     <section id = "services" class = "container-fluid">
-        <div class = "container d-flex flex-row ai-center jc-around">
+        <div class = "container d-flex flex-row ai-center jc-around tablet-col tablet-text-center">
             <div class = "col-services-title d-flex jc-center as-stretch">
                 <div class = "as-center">
                     Services
@@ -144,7 +148,7 @@
 
     <section id = "freelance" class = "container-fluid">
         <div class = "container d-flex flex-col jc-center ai-center">
-            <div class = "f-title">
+            <div class = "f-title tablet-text-center">
                 I’m also avalible for freelance work
             </div>
 
@@ -199,7 +203,7 @@
     </section>
 
     <footer class = "container-fluid">
-        <div class = "container d-flex jc-around text-uppercase">
+        <div class = "container d-flex jc-around text-uppercase mobile-col tablet-ai-center">
             <div class = "footer-item">
                 <a href = "#">
                    <i class = "fa fa-facebook"></i> Facebook
