--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -7,6 +7,7 @@
         <link href = "css/main.css" rel = "stylesheet">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
         <script src="js/slick.min.js"></script>
         <script src="js/smoth.js"></script>
         <script src="js/custom.js"></script>
