--- a/appoligeya/motion/index.html
+++ b/appoligeya/motion/index.html
@@ -28,7 +28,7 @@
 
                 <div class = "header-title" id = "header-title">
                     <div class = "header-text">Do your motion in few clicks!</div>
-                    <div class = "header-buttons d-flex ai-center jc-around">
+                    <div class = "header-buttons d-flex ai-center jc-center">
                         <btn text="Try Free" href = "#"></btn>
                         <btn text="Get a License" href = "#" class = "no-opacity"></btn>
                     </div>
