--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -98,7 +98,7 @@
     <section id = "about" class = "container-fluid">
         <div class = "container d-flex ai-center text-center flex-col">
             <div class = "about-smth">
-                Something
+                something
             </div>
             <div class = "about-title text-uppercase">
                 About me
@@ -121,27 +121,50 @@
 
             <div class = "d-flex ai-center jc-around">
                 <div class = "prevArrow">
-                    <img src = "img/arrow.png">
+                    <div class = "arrow-container">
+                        <img src = "img/arrow.png">
+                    </div>
                 </div>
                 <div class = "portf-slider">
                     <div class = "slider-item">
+                        <div class = "p-item-name">
+                            Name
+                        </div>
                         <img src = "img/p-item.png">
+                        <div class = "p-item-href">
+                            <a href = "#">Link</a>
+                        </div>
                     </div>
                     <div class = "slider-item">
+                        <div class = "p-item-name">
+
+                        </div>
                         <img src = "img/p-item.png">
+                        <div class = "p-item-href"></div>
                     </div>
                     <div class = "slider-item">
+                        <div class = "p-item-name">
+                            Name
+                        </div>
                         <img src = "img/p-item.png">
+                        <div class = "p-item-href">
+                            <a href = "#">Link</a>
+                        </div>
                     </div>
                     <div class = "slider-item">
+                        <div class = "p-item-name">
+                            Name
+                        </div>
                         <img src = "img/p-item.png">
-                    </div>
-                    <div class = "slider-item">
-                        <img src = "img/p-item.png">
+                        <div class = "p-item-href">
+                            <a href = "#">Link</a>
+                        </div>
                     </div>
                 </div>
                 <div class = "nextArrow">
-                    <img src = "img/arrow.png" class = "r">
+                    <div class = "arrow-container">
+                        <img src = "img/arrow.png" class = "r">
+                    </div>
                 </div>
             </div>
         </div>
