--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -128,36 +128,40 @@
                 <div class = "portf-slider">
                     <div class = "slider-item">
                         <div class = "p-item-name">
-                            Name
+                            One Page Portfolio
                         </div>
-                        <img src = "img/p-item.png">
+                        <img src = "img/portf.png">
                         <div class = "p-item-href">
-                            <a href = "#">Link</a>
+                            <a href = "#">Go to page</a>
                         </div>
                     </div>
                     <div class = "slider-item">
                         <div class = "p-item-name">
+                            Motion for Adobe
+                        </div>
+                        <img src = "img/mac.png">
+                        <div class = "p-item-href">
+                            <a href = "motion/index.html">Go to page</a>
+                        </div>
+                    </div>
+                    <div class = "slider-item">
+                        <div class = "p-item-name">
+                            Delivery
+                        </div>
+                        <img src = "img/delivery.png">
+                        <div class = "p-item-href">
+                            <a href = "delivery/index.html">
+                                Go to page
+                            </a>
+                        </div>
+                    </div>
+                    <div class = "slider-item">
+                        <div class = "p-item-name">
+                            UI Kit Menu
+                        </div>
+                        <img src = "img/menu.jpg">
+                        <div class = "p-item-href">
 
-                        </div>
-                        <img src = "img/p-item.png">
-                        <div class = "p-item-href"></div>
-                    </div>
-                    <div class = "slider-item">
-                        <div class = "p-item-name">
-                            Name
-                        </div>
-                        <img src = "img/p-item.png">
-                        <div class = "p-item-href">
-                            <a href = "#">Link</a>
-                        </div>
-                    </div>
-                    <div class = "slider-item">
-                        <div class = "p-item-name">
-                            Name
-                        </div>
-                        <img src = "img/p-item.png">
-                        <div class = "p-item-href">
-                            <a href = "#">Link</a>
                         </div>
                     </div>
                 </div>
