--- a/appoligeya/index.html
+++ b/appoligeya/index.html
@@ -255,6 +255,12 @@
         </div>
     </footer>
 
+    <figure id = "modal-image">
+        <div class = "image-container">
+            <img src = "" class = "modal-img">
+        </div>
+    </figure>
+
     </body>
     <link href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel = "stylesheet">
     <link href = "css/slick.css" rel = "stylesheet">
@@ -266,4 +272,5 @@
     <link href = "css/freelance.css" rel = "stylesheet">
     <link href = "css/contact.css" rel = "stylesheet">
     <link href = "css/footer.css" rel = "stylesheet">
+    <link href = "css/modal.css" rel = "stylesheet">
 </html>
