--- a/Itop/index.html
+++ b/Itop/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src = "js/live-border.js"></script>
@@ -22,6 +23,7 @@
     <link href = "css/team.css" rel = "stylesheet">
     <link href = "css/contact.css" rel = "stylesheet">
     <link href = "css/modal.css" rel = "stylesheet">
+    <link href = "css/footer.css" rel = "stylesheet">
 </head>
 
 <body id = "body">
@@ -365,6 +367,51 @@
                 </form>
             </div>
     </div>
+
+    <footer id = "footer" class = "container-fluid">
+        <div class = "container d-flex flex-col">
+            <div class = "footer-contact d-flex flex-row jc-between">
+                <div class = "footer-contact-pos d-flex flex-row ai-center">
+                    <div class = "footer-contact-img">
+                        <i class = "fa fa-map-marker"></i>
+                    </div>
+                    <div class = "footer-contact-text">
+                        <div>Украина, г.Днепр</div>
+                        <div>Пр. Гагарина 67а</div>
+                    </div>
+                </div>
+                <div class = "footer-contact-sep"></div>
+                <div class = "footer-contact-tel d-flex flex-row ai-center">
+                    <div class = "footer-contact-img">
+                        <i class = "fa fa-phone"></i>
+                    </div>
+                    <div class = "footer-contact-text">
+                        <div>8 800 555 35 35</div>
+                        <div>8 800 555 35 35</div>
+                    </div>
+                </div>
+                <div class = "footer-contact-sep"></div>
+                <div class = "footer-contact-mail d-flex flex-row ai-center">
+                    <div class = "footer-contact-img">
+                        <i class = "fa fa-envelope"></i>
+                    </div>
+                    <div class = "footer-contact-text">
+                        <div>sales@domain.com</div>
+                        <div>contact@domain.com</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class = "footer-socials d-flex jc-center ai-center">
+                <a href = "#"><i class = "fa fa-instagram"></i></a>
+                <a href = "#"><i class = "fa fa-instagram"></i></a>
+                <a href = "#"><i class = "fa fa-instagram"></i></a>
+                <a href = "#"><i class = "fa fa-instagram"></i></a>
+                <a href = "#"><i class = "fa fa-instagram"></i></a>
+                <a href = "#"><i class = "fa fa-instagram"></i></a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 <script src = "js/main.js"></script>
