--- a/elnova/index.html
+++ b/elnova/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset = "utf-8">
+    <link href = "css/animate.css" rel = "stylesheet">
     <link href = "css/flex.css" rel = "stylesheet">
     <link href = "css/fonts.css" rel = "stylesheet">
     <link href = "css/main.css" rel = "stylesheet">
@@ -36,7 +37,7 @@
             <div class = "elnova-letter elnova-e">
                 E
             </div>
-            <nav id = "nav" class = "d-flex ai-center">
+            <nav id = "nav" class = "d-flex ai-center proxima-nova-bold">
 
                 <div class = "nav-left mr-auto d-flex ai-center"></div>
 
@@ -71,10 +72,10 @@
             </nav>
 
             <div class = "header-title-block js-center as-center d-flex flex-col proxima-nova-bold">
-                <div class = "header-title text-uppercase">
+                <div class = "header-title text-uppercase wow bounceInUp">
                     elnova
                 </div>
-                <div class = "header-title-btn d-flex as-start text-uppercase ai-center">
+                <div class = "header-title-btn d-flex as-start text-uppercase ai-center wow bounceInUp">
                     <a href = "#">learn more <img src="img/header-btn-arrow.png"></a>
                 </div>
             </div>
@@ -99,7 +100,7 @@
             L
         </div>
         <div class = "container d-flex ai-stretch laptop-jc-between">
-            <div class = "d-flex jc-center flex-col tablet-text-center">
+            <div class = "d-flex jc-center flex-col tablet-text-center wow bounceInLeft">
                 <div class = "italian-title proxima-nova-bold text-uppercase">
                     Итальянский дизайн
                     <br>
@@ -128,21 +129,21 @@
                 </div>
             </div>
             <div class = "d-flex italian-img-c">
-                <img src = "img/italian-design.png" class = "italian-img">
+                <img src = "img/italian-design.png" class = "italian-img wow lightSpeedIn">
             </div>
         </div>
     </section>
 
     <section id = "smile" class = "container-fluid">
         <div class = "container proxima-nova-bold text-center">
-            <div class = "smile-title text-uppercase">
+            <div class = "smile-title text-uppercase wow bounceInLeft">
                 Ваша улыбка и отличное настроение
             </div>
-            <div class = "smile-desc text-uppercase">
+            <div class = "smile-desc text-uppercase wow bounceInLeft">
                 наше лучшее достижение и самая высокая награда
             </div>
 
-            <div class = "smile-items d-flex flex-row jc-around">
+            <div class = "smile-items d-flex flex-row jc-around flipInX wow">
                 <div class = "smile-item">
                     <div class = "smile-item-digit">
                         1
@@ -197,10 +198,10 @@
             N
         </div>
         <div class = "container">
-            <div class = "catalog-title proxima-nova-bold text-center text-uppercase">
+            <div class = "catalog-title proxima-nova-bold text-center text-uppercase wow fadeInDown">
                 КАТАЛОГ КУХОНЬ <span class = "text-elnova">ELNOVA 2017</span>
             </div>
-            <div class = "catalog-desc proxima-nova-bold text-center text-uppercase">
+            <div class = "catalog-desc proxima-nova-bold text-center text-uppercase wow fadeInUp">
                 любую кухня можно спроектировать на свой вкус
             </div>
 
@@ -319,7 +320,7 @@
             <div class = "furniture-title text-uppercase text-center">
                 КУХОННАЯ МЕБЕЛЬ ДЛЯ ВАШЕГО ВДОХНОВЛЕНИЯ
             </div>
-            <div class = "furniture-btn">
+            <div class = "furniture-btn wow bounceInUp">
                 <a href = "#">ГАЛЕРЕЯ КУХОНЬ ELNOVA</a>
             </div>
         </div>
@@ -327,17 +328,17 @@
 
     <section id = "steps" class = "container-fluid">
         <div class = "container-steps d-flex flex-col">
-            <div class = "steps-title proxima-nova-bold text-elnova text-center text-uppercase">
+            <div class = "steps-title proxima-nova-bold text-elnova text-center text-uppercase wow rubberBand">
                 Несколько шагов к кухне вашей мечты
             </div>
 
             <div class = "d-flex ai-center flex-row text-uppercase step-item">
-                <div class = "step-img">
+                <div class = "step-img wow slideInLeft">
                     <img src = "img/step1.png">
                     <div class = "step-img-count step-img-count-mr">1</div>
                 </div>
 
-                <div class = "step-text">
+                <div class = "step-text wow slideInRight">
                     <div class = "step-title open-sans-bold">
                         Позвоните нам или оставьте заявку online
                     </div>
@@ -350,7 +351,7 @@
             </div>
 
             <div class = "d-flex ai-center flex-row-reverse text-uppercase step-item text-right">
-                <div class = "step-img elnova-letter-o">
+                <div class = "step-img elnova-letter-o wow rotateInDownRight">
                     <div class = "elnova-letter elnova-o">
                         <img src = "img/elnova-o.png">
                     </div>
@@ -358,7 +359,7 @@
                     <div class = "step-img-count step-img-count-ml">2</div>
                 </div>
 
-                <div class = "step-text">
+                <div class = "step-text wow rotateInDownLeft">
                     <div class = "step-title open-sans-bold">
                         Мы сделаем замеры, отрисуем дизайн
                     </div>
@@ -371,12 +372,12 @@
             </div>
 
             <div class = "d-flex ai-center flex-row text-uppercase step-item">
-                <div class = "step-img">
+                <div class = "step-img wow bounceInLeft">
                     <img src = "img/step3.png">
                     <div class = "step-img-count step-img-count-mr">3</div>
                 </div>
 
-                <div class = "step-text">
+                <div class = "step-text wow bounceInRight">
                     <div class = "step-title open-sans-bold">
                         Заключим договор,Утвердив конечный проект
                     </div>
@@ -387,12 +388,12 @@
             </div>
 
             <div class = "d-flex ai-center flex-row-reverse text-uppercase step-item text-right">
-                <div class = "step-img">
+                <div class = "step-img wow rotateInDownRight">
                     <img src = "img/step4.png">
                     <div class = "step-img-count step-img-count-ml">4</div>
                 </div>
 
-                <div class = "step-text">
+                <div class = "step-text wow rotateInDownLeft">
                     <div class = "step-title open-sans-bold">
                         Создадим 3D макет,оживим его и установим
                     </div>
@@ -407,7 +408,7 @@
     <section id = "order" class = "container-fluid">
         <div class = "container d-flex flex-row ai-center jc-between">
             <div class = "order-text d-flex flex-row">
-                <div class = "elnova-v elnova-letter proxima-nova-bold">
+                <div class = "elnova-v elnova-letter proxima-nova-bold wow slideInLeft">
                     V
                 </div>
                 <div class = "order-items d-flex flex-col">
@@ -477,7 +478,7 @@
                     </label>
                     <input id = "form-address" type="text" required>
 
-                    <button type = "submit">
+                    <button type = "submit" class = " wow bounceInUp">
                         Получить расчет кухни
                     </button>
 
@@ -488,7 +489,7 @@
     </section>
 
     <section id = "address" class = "container-fluid d-flex">
-        <div class = "col ml-auto d-flex flex-col">
+        <div class = "col ml-auto d-flex flex-col wow slideInLeft">
             <div class = "address-text">
                 <div class = "address-title proxima-nova-bold text-uppercase">
                     Наши Адреса
@@ -524,18 +525,7 @@
 
 </body>
 
-<script>
-    var nav = document.getElementById('nav');
-
-    function toggle() {
-        var display = window.getComputedStyle(nav).getPropertyValue('display');
-        if (display == 'flex'){
-            nav.style.display = 'none';
-        }
-        else{
-            nav.style.display = 'flex';
-        }
-    }
-</script>
+<script src = "js/wow.min.js"></script>
+<script src = "js/main.js"></script>
 
 </html>
