--- a/instatour/index.html
+++ b/instatour/index.html
@@ -316,7 +316,7 @@
 
                 <div class = "team-item g">
                     <div class = "team-img">
-                        <img src = "img/IMG_2260_sRGB-28-02-18-07-34.jpg">
+                        <img src = "img/kyanan.jpg">
                     </div>
                     <div class = "team-title">
                         Кянан
