--- a/instatour/index.html
+++ b/instatour/index.html
@@ -40,6 +40,9 @@
                 Записаться на тур
             </div>
         </div>
+        <div class = "separator-bottom">
+            <img src = "img/separator-bottom.png">
+        </div>
     </header>
 
     <div class = "container-fluid">
@@ -211,13 +214,13 @@
                         <img src = "img/85648789.jpg">
                     </div>
                     <div class = "live-item">
+                        <img src = "img/slider-4.jpg">
+                    </div>
+                    <div class = "live-item">
                         <img src = "img/slider-2.jpg">
                     </div>
                     <div class = "live-item">
                         <img src = "img/slider-3.jpg">
-                    </div>
-                    <div class = "live-item">
-                        <img src = "img/slider-4.jpg">
                     </div>
                     <div class = "live-item">
                         <img src = "img/slider-5.jpg">
@@ -228,13 +231,13 @@
                         <img src = "img/85648789.jpg">
                     </div>
                     <div class = "live-slider-pagination" data-slide="1">
-                        <img src = "img/slider-2.jpg">
+                        <img src = "img/slider-4.jpg">
                     </div>
                     <div class = "live-slider-pagination" data-slide="2">
-                        <img src = "img/slider-3.jpg">
+                        <img src = "img/slider-2.jpg">
                     </div>
                     <div class = "live-slider-pagination" data-slide="3">
-                        <img src = "img/slider-4.jpg">
+                        <img src = "img/slider-3.jpg">
                     </div>
                     <div class = "live-slider-pagination" data-slide="4">
                         <img src = "img/slider-5.jpg">
@@ -368,7 +371,7 @@
                 Что вас ждет?
             </div>
             <div class = "wyw-items">
-                <div class = "wyw-item">
+                <div class = "wyw-item mr-15">
                     <div class = "wyw-item-numb">
                         1
                     </div>
@@ -428,7 +431,7 @@
                     <div class = "wyw-item-img">
                         <img src = "img/wyw-5.png">
                     </div>
-                    <div class = "wyw-item-desc">
+                    <div class = "wyw-item-desc ml-10">
 У нас отели и транспорт отличного качества, профессиональный фотограф, душевный гид.
 И всё это по одной из самых низких цен на рынке                    </div>
                 </div>
@@ -440,7 +443,7 @@
                     <div class = "wyw-item-img">
                         <img src = "img/wyw-6.png">
                     </div>
-                    <div class = "wyw-item-desc">
+                    <div class = "wyw-item-desc ml-15">
 Предоставляем страховку Tripinsurance,
 которая является провайдером швейцарской компании Allianz Global Assistance, имеющей прямые договоры с клиниками в Баку                    </div>
                 </div>
